# Parallelism_Theory

./: CMakeLists.txt  README.md  array.cpp
Lab1/: CMakeLists.txt  README.md  array.cpp
Lab2/Task1/: CMakeLists.txt  README.md  dgemv_omp.c  plot.py
Lab2/Task2/: CMakeLists.txt  README.md  integral_omp.c  plot_integral.py
Lab2/Task3/: CMakeLists.txt  README.md  main.cpp  main_schedule_test.cpp  plot.py  results.csv  run_schedules.sh  run_tests.sh  schedule_results.csv
Lab3/Task1/: CMakeLists.txt  README.md  dgemv_threads.cpp  plot_speedup.py
Lab3/Task2/: CMakeLists.txt  README.md  main.cpp  server.h  test_check.cpp
Lab4/: lab.py
Lab5/: README.md  lab.py
Lab6/: Makefile  README.md  lab1.cpp  lab2.cpp  lab3.cpp
